--- a/builder/Makefile.release
+++ b/builder/Makefile.release
@@ -191,7 +191,7 @@ ifneq ("$(SNAPSHOT)", "1")
 #
 ifeq ($(ARCH),x86_64)
 	$(CMD_TOUCH) $(RELEASE_NOTES)
-	echo '## Docker Image (x86_64 only)  ' >> $(RELEASE_NOTES)
+	echo '## Docker Image' >> $(RELEASE_NOTES)
 	echo '- `docker pull docker.io/$(PUSH_DOCKER_REPO):$(IMAGE_TAG)`' >> $(RELEASE_NOTES);
 	echo '  ' >> $(RELEASE_NOTES);
 	echo '## Docker Images (per architecture)  ' >> $(RELEASE_NOTES)
