feat(tests): add io_uring tests

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -66,6 +66,8 @@ env:
     BPF_ATTACH
     CONTAINERS_DATA_SOURCE
     PROCTREE_DATA_SOURCE
+    IO_ISSUE_SQE
+    IO_WRITE
 jobs:
   #
   # CODE VERIFICATION
