--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -55,9 +55,7 @@ jobs:
     name: Release (aarch64)
     env:
       GH_TOKEN: ${{ github.token }}
-    # only runs after x64 released
-    needs:
-      - release-x86_64
+    needs: [ release-x86_64 ]
     runs-on: [ "github-self-hosted_ami-03217ce7c37572c4d_${{ github.event.number }}-${{ github.run_id }}" ]
     permissions:
       contents: write
@@ -111,6 +109,10 @@ jobs:
           ref: ${{ github.event.inputs.ref }}
           submodules: true
           fetch-depth: 0
+      - name: Install Cosign
+        uses: sigstore/cosign-installer@main
+        with:
+          cosign-release: 'v2.0.2'
       - name: Login to docker.io registry
         uses: docker/login-action@v2
         with:
@@ -128,4 +130,10 @@ jobs:
             aquasec/tracee:aarch64-${TAG}
           docker manifest push aquasec/tracee:latest
           docker manifest push aquasec/tracee:${TAG}
+        shell: bash
+      - name: Sign the latest manifest with Cosign
+        run: |
+          TAG=$(echo ${{ github.event.inputs.ref }} | sed -e "s/v//gI")
+          cosign sign -y aquasec/tracee:latest
+          cosign sign -y aquasec/tracee:${TAG}
         shell: bash
