--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,20 +7,7 @@ repo_url: https://github.com/aquasecurity/tracee
 edit_uri: ""
 
 nav:
-    - Getting Started:
-          - Overview: index.md
-          - Kubernetes - Quick Start: getting-started/kubernetes-quickstart.md
-          - Docker - Quick Start: getting-started/docker-quickstart.md
-          - Installation:
-                - Getting Tracee: getting-started/installing/getting.md
-                - Prerequisites: getting-started/installing/prerequisites.md
-                - Docker: getting-started/installing/docker.md
-                - Kubernetes: getting-started/installing/kubernetes.md
-                - Override OS files: getting-started/installing/override-os-files.md
-                - Packages:
-                      - Ubuntu: getting-started/installing/distros/ubuntu.md
-                      - Fedora: getting-started/installing/distros/fedora.md
-                      - NixOS: getting-started/installing/distros/nix-nixos.md
+    - Home: index.md
     - Tutorials:
           - Overview: tutorials/overview.md
           - Working with Tracee's Policies on Kubernetes: tutorials/k8s-policies.md
@@ -30,6 +17,16 @@ nav:
           - Additional Resources: tutorials/additional-resources.md
     - Docs:
           - Overview: docs/overview.md
+          - Installation:
+                - Overview: docs/install/overview.md
+                - Prerequisites: docs/install/prerequisites.md
+                - Docker: docs/install/docker.md
+                - Kubernetes: docs/install/kubernetes.md
+                - Override OS files: docs/install/override-os-files.md
+                - Packages:
+                      - Ubuntu: docs/install/distros/ubuntu.md
+                      - Fedora: docs/install/distros/fedora.md
+                      - NixOS: docs/install/distros/nix-nixos.md
           - Events:
                 - Overview: docs/events/overview.md
                 - Built-in Events:
