chore!: change crs flag/key to cri
BREAKING CHANGE: change crs flag to cri

--- a/deploy/helm/tracee/templates/tracee-config.yaml
+++ b/deploy/helm/tracee/templates/tracee-config.yaml
@@ -30,8 +30,8 @@ data:
     capabilities:
       {{- toYaml . | nindent 8 }}
     {{- end }}
-    {{- with .Values.config.crs }}
-    crs:
+    {{- with .Values.config.cri }}
+    cri:
       {{- toYaml . | nindent 8 }}
     {{- end }}
     {{- with .Values.config.rego }}
