--- a/deploy/helm/tracee/values.yaml
+++ b/deploy/helm/tracee/values.yaml
@@ -71,7 +71,7 @@ config:
   installPath: ""
   signaturesDir: ""
   capabilities: []
-  crs: []
+  cri: []
   rego: []
   cache:
     - cache-type=mem
