--- a/examples/config/global_config.yaml
+++ b/examples/config/global_config.yaml
@@ -17,7 +17,7 @@ capabilities:
     # drop:
     #     - cap_chown
 
-crs:
+cri:
     # - runtime:
     #     name: containerd
     #     socket: /var/run/containerd/containerd.sock
