--- a/examples/config/global_config_cli.yaml
+++ b/examples/config/global_config_cli.yaml
@@ -5,7 +5,7 @@ proctree:
     - none
 capabilities: []
 containers: false
-crs: []
+cri: []
 healthz: false
 install-path: /tmp/tracee
 listen-addr: :3366
