chore(config): add gotemplate and content-type
Since #3622, webhooks can be configured with a gotemplate and a
content-type. This commit adds these two fields to the config file.

--- a/examples/config/global_config.yaml
+++ b/examples/config/global_config.yaml
@@ -111,11 +111,15 @@ output:
     #         host: localhost
     #         port: 8000
     #         timeout: 5s
+    #         gotemplate: /path/to/template/test.tmpl
+    #         content-type: application/json
     #     - webhook2:
     #         protocol: http
     #         host: localhost
     #         port: 9000
     #         timeout: 3s
+    #         gotemplate: /path/to/template/test.tmpl
+    #         content-type: application/json
 
     # options:
     #     none: false
